welcome.lessons.welcome.bat.bool1.Close10.scala.error
countTeen:6: error: type mismatch;
 found   : Unit
 required: Int
  if ( d>= 13 && d<=19 ) {ados = ados + 1}
                               ^countTeen:6: error: type mismatch;
 found   : Unit
 required: Int
  if ( d>= 13 && d<=19 ) {ados = ados + 1}
  ^