welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
  if (Math.abs(a) == Math.abs(b) {
    return 0
  }
  if (Math.abs(a) < Math.abs(b)) {
    return a
  } else { return b }
}